# Pyongyang-VLM

./: .env.example  .gitignore  README.md  app_gradio.py  main.py  pyproject.toml
.claude/: settings.json
config/: matching_engine.yaml  system_config.yaml  vision_pipeline.yaml
demo/: debug_track_stitching.py  demo_query_understanding.py  demo_vision_pipeline.py  export_video_embeddings.py  query_video_embeddings.py  render_query_result.py  run_module3_phase2.py
docs/: Bao_Cao_Giua_Ky_Do_An_Le_Van_Tung.docx  Bao_Cao_Giua_Ky_Do_An_Le_Van_Tung.docx.bak  VLM TBPR.docx  pipeline1.md  pipeline2.md
docs/slide/: index.html  script.md  slide-style.html
scripts/: check_video.py  download_video.py  eval_cuhk.py  extract_frame.py  train_lora.py
src/: pipeline1.ipynb
src/demo_pipeline/: __init__.py  query_index.py  track_stitching.py  video_indexing.py  video_renderer.py
src/matching_engine/: config.py  pipeline.py  schema.py
src/matching_engine/components/: chunk_sampler.py  embedding_cache.py  hierarchical_scorer.py  track_candidate_builder.py
src/matching_engine/core/: clip_model.py  dataset.py  metrics.py  retrieval_encoder.py  tbps_clip_encoder.py  training.py
src/query_understanding/: llm_parser.py  prompts.py  schema.py  validator.py
src/utils/: logger.py  timer.py
src/vision_pipeline/: __init__.py  pipeline.py  schema.py
tests/: conftest.py  test_phase1_sanity.py  test_track_stitching.py
tests/demo_pipeline/: test_video_index_mvp.py  test_video_renderer.py
tests/matching_engine/: test_phase2_matching_engine.py
tests/query_understanding/: test_query_understanding.py
tests/vision_pipeline/: test_vision_pipeline.py
(+5 files in other folders)
