[project]
name = "pyongyang-vlm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.2",
    "google-genai>=2.7.0",
    "ipykernel>=7.2.0",
    "openai>=2.40.0",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.5.0",
    "ultralytics>=8.4.34",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
